<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.bahria.driverapp.ui.login.view_model.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue"
        tools:context=".ui.authentication.SplashActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_15ssp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/_15ssp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20ssp"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/welcome_back"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/continue_login"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/empID"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40ssp"
            android:layout_marginTop="@dimen/_250ssp"
            android:background="@drawable/outline_border_white"
            android:drawableStart="@drawable/ic_baseline_edit_24"
            android:drawablePadding="@dimen/_5ssp"
            android:drawableTint="@color/white"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/emp_id"
            android:inputType="number"
            android:maxLines="1"
            android:text="@={loginViewModel.empID}"
            android:padding="@dimen/_10ssp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

        <EditText
            android:id="@+id/cnic"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40ssp"
            android:layout_marginTop="12dp"
            android:background="@drawable/outline_border_white"
            android:drawableStart="@drawable/ic_baseline_edit_24"
            android:drawablePadding="@dimen/_5ssp"
            android:drawableTint="@color/white"
            android:text="@={loginViewModel.cnic}"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/cnic"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="13"
            android:padding="@dimen/_10ssp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/empID" />

        <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45ssp"
            android:layout_marginTop="@dimen/_40ssp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/cnic" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_10ssp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/forget_pass"
            android:textColor="#80000000"
            android:textSize="@dimen/_10ssp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/login" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_15ssp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/_15ssp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
