<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mapContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/top_layout"
            layout="@layout/top_layout" />

        <androidx.cardview.widget.CardView
            android:id="@+id/driverDetailCardView"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40ssp"
            android:layout_margin="@dimen/_10ssp"
            app:cardCornerRadius="@dimen/_2ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_10ssp"
                        android:layout_marginEnd="@dimen/_10ssp"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingEnd="@dimen/_5ssp"
                        android:text="Muhammad Hamza"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10ssp" />

                </RelativeLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10ssp"
                    android:layout_marginBottom="@dimen/_10ssp"
                    android:background="@color/grey" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/busNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_10ssp"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingEnd="@dimen/_5ssp"
                        android:text="Bus No: JF-1234"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10ssp" />

                </RelativeLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="@dimen/_45ssp"
            android:layout_marginStart="@dimen/_10ssp"
            android:layout_marginTop="@dimen/_5ssp"
            android:layout_marginEnd="@dimen/_10ssp"
            app:cardCornerRadius="@dimen/_2ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/driverDetailCardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingEnd="@dimen/_5ssp"
                        android:text="@string/travel_time"
                        android:textSize="@dimen/_10ssp" />

                    <Chronometer
                        android:id="@+id/travelTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingEnd="@dimen/_5ssp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_5ssp"
                    android:layout_marginBottom="@dimen/_5ssp"
                    android:background="@color/grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingEnd="@dimen/_5ssp"
                        android:text="@string/starting_time"
                        android:textSize="@dimen/_10ssp" />

                    <TextView
                        android:id="@+id/startingTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingEnd="@dimen/_5ssp"
                        android:text="10 Feb'2023 14:10:00 pm"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_layout"
            tools:context=".ui.map.MapActivity" />

        <Button
            android:id="@+id/endUpdates"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45ssp"
            android:layout_margin="@dimen/_10ssp"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/end_trip"
            android:visibility="gone"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="@+id/map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

