<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        tools:context=".ui.profile.ProfileActivity">

        <include
            android:id="@+id/header"
            layout="@layout/top_layout" />

        <androidx.cardview.widget.CardView
            android:id="@+id/profileInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7ssp"
            app:cardCornerRadius="@dimen/_2ssp"
            app:layout_constraintTop_toBottomOf="@+id/header">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_15ssp"
                android:layout_marginEnd="@dimen/_10ssp"
                android:layout_marginBottom="@dimen/_20ssp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/userImg"
                    android:layout_width="@dimen/_60ssp"
                    android:layout_height="@dimen/_60ssp"
                    android:src="@drawable/dummy_profile_img" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_7ssp"
                    android:layout_toEndOf="@+id/userImg"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="Muhammad Zeeshan"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:id="@+id/regNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="Employee ID: 21332"
                        android:textSize="@dimen/_10ssp" />


                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/current_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="Online"
                            android:textSize="@dimen/_10ssp" />

                        <ImageView
                            android:layout_width="@dimen/_12ssp"
                            android:layout_height="@dimen/_12ssp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/_3ssp"
                            android:layout_toEndOf="@+id/current_status"
                            android:src="@drawable/ic_baseline_check_circle_24" />

                    </RelativeLayout>

                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/generalInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7ssp"
            app:cardCornerRadius="@dimen/_2ssp"
            app:layout_constraintTop_toBottomOf="@+id/profileInfoLayout"
            tools:layout_editor_absoluteX="0dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_15ssp"
                android:layout_marginEnd="@dimen/_10ssp"
                android:layout_marginBottom="@dimen/_20ssp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5ssp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="@string/gn_information"
                        android:textColor="@color/light_blue"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:id="@+id/tower"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10ssp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="Employee ID: 21332"
                        android:textSize="@dimen/_11ssp" />

                    <TextView
                        android:id="@+id/house"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="Cnic: 42101-1234567-8"
                        android:textSize="@dimen/_11ssp" />

                    <TextView
                        android:id="@+id/contact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="Cell No: 03351234567"
                        android:textSize="@dimen/_11ssp" />

                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/view_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7ssp"
            app:cardCornerRadius="@dimen/_2ssp"
            app:layout_constraintTop_toBottomOf="@+id/generalInfoLayout"
            tools:layout_editor_absoluteX="0dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_10ssp"
                android:layout_marginEnd="@dimen/_10ssp"
                android:layout_marginBottom="@dimen/_10ssp">

                <ImageView
                    android:id="@+id/historyIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5ssp"
                    android:src="@drawable/ic_baseline_work_history_24"
                    app:tint="@color/light_blue" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5ssp"
                    android:layout_toEndOf="@+id/historyIcon"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/view_history"
                    android:textColor="@color/light_blue"
                    android:textSize="@dimen/_13ssp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/logout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45ssp"
            android:layout_margin="@dimen/_10ssp"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/logout"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
